See if it actually builds the library...

--- a/crypto/Makefile
+++ b/crypto/Makefile
@@ -1,7 +1,7 @@
 CC = gcc
 CFLAGS = -Wall -Werror -Wextra -pedantic -Wno-deprecated-declarations
 LDFLAGS = -lssl -lcrypto
-LIB = lib_hblk_crypto.a
+LIB = libhblk_crypto.a
 OBJ_DIR = ./obj
 
 $(LIB): $(patsubst %.c, $(OBJ_DIR)/%.o, $(wildcard *.c))
